<resources>
    <string name="app_name">Sundawn</string>
    <string name="hello_world">Hello world!</string>
    <string name="forecast_data_error">An error occurred while retrieving forecast data.</string>

    <string name="action_settings">Settings</string>
    <string name="action_view_location">Map location</string>
    <string name="action_share">Share</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_title">Location</string>
    <string name="pref_location_default">Ramat-Gan</string>
    <string name="pref_location_key">location</string>

    <string name="pref_count_title">Day Count</string>
    <string name="pref_count_default">7</string>
    <string name="pref_count_key">count</string>

    <string name="pref_units_title">Units</string>
    <string name="pref_units_default">@string/pref_units_value_celsius</string>
    <string name="pref_units_key">units</string>

    <string name="pref_units_choice_celsius">Celsius</string>
    <string name="pref_units_value_celsius">metric</string>

    <string name="pref_units_choice_fahrenheit">Fahrenheit</string>
    <string name="pref_units_value_fahrenheit">imperial</string>
    <string name="title_activity_detail">Details</string>
</resources>
